# simple-api-flask

./: .gitignore  app.py  cep.txt  ceps.txt  leitura_de_codigo.py  normalizar_cep.py  pyproject.toml
app/: exemplo_de_rota.py  func_in_python.py  main.py
app/db/: model.py
app/templates/: for.html  form.html  if.html  index.html  users.html
auxiliar/: README.md  abrir_arquivo.py  app.py  ceps.txt  leitura_de_codigo.py
